# scraps

./: README.md
AnnoyingLogo/src/AnnoyingLogo/: Form1.cs
BlueMoods/src/BlueMoodsRemovalTool/: BlueMoodsRemovalTool.csproj  BlueMoodsRemovalTool.sln  Program.cs
C++Game/src/C++Game/: compile.bat
DiscordDevBadgeBot/src/DiscordDevBadgeBot/: node_modules_install.bat
DogApp/src/DogApp/: DogApp.sln
MediaConverter/: README.md
NSLookupTool/src/NSLookupTool/: .editorconfig  NSLookupTool.sln  main.cs  main_form.Designer.cs  main_form.cs
NumberSheet/src/NumberSheet/: main.cpp
ServerHelper/src/ServerHelper/: toolbox1.cs  versionbrowser1.resx
Vega/src/Vega/: README.MD  body1.Designer.cs  boot1.cs  vega_launcher.csproj
c++game/src/c++game/: main.cpp
things/BulkFileRenamer/: BulkFileRenamer.sln
things/BulkFileRenamer/BulkFileRenamer/: MainMenu.Designer.cs
things/DirectoryTreeCloner/: DirectoryTreeCloner.sln
things/DirectoryTreeCloner/DirectoryTreeCloner/: MainMenu.Designer.cs
things/DynamicFirewall/DynamicFirewall/: DynamicFirewall.csproj  MainMenu.cs
things/GameQuest/GameQuest/: GameQuest.csproj  MainMenu.cs
things/ImagePairer/: ImagePairer.sln
things/Snake/src/Snake/: CMakeLists.txt  compile.bat
things/Snake/src/Snake/src/: game.cpp  game.hpp  game_functions.cpp  game_init.cpp  game_render.cpp  game_update.cpp  main.cpp  math.hpp  snake.cpp  snake.hpp
things/videoplayer/src/videoplayer/: CMakeLists.txt  build_windows.bat
things/videoplayer/src/videoplayer/src/: main.cpp  media.cpp  media.hpp  timeline.hpp  types.hpp  window.hpp
(+371 files in other folders)
